# shared_memory

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Config.cmake.in  README.md  license.txt  package.xml  readme.md
.github/workflows/: ci_ubuntu_18_04_debug.yml  ci_ubuntu_18_04_release.yml  deploy_doc.yml
benchmarks/: array.cpp  clean_shared_memory.cpp  main.cpp  memory_size.cpp  serialization_frequency.cpp  stress_get_api.cpp  stress_get_raw_boost_efficient.cpp  stress_get_raw_boost_inefficient.cpp  stress_set_api.cpp  stress_set_raw_boost_efficient.cpp  stress_set_raw_boost_inefficient.cpp
debian/: control
demos/: cond_var.cpp  cond_var_demo.cpp  cond_var_ping.cpp  cond_var_pong.cpp  cond_var_timeout.cpp  condition_variable.py  create_cv.cpp  create_segment.cpp  demo_array_constructions.cpp  demo_eigen.cpp  demo_failing.cpp  demo_failing_instance.cpp  demo_read_array.cpp  demo_verbose.cpp  demo_write_array.cpp  exchange_manager_clean.cpp  exchange_manager_consumer.cpp  exchange_manager_demo.cpp  exchange_manager_producer.cpp  four_int_values.cpp  get_data.cpp  locked_cond_var_ping.cpp  locked_cond_var_pong.cpp  non_existing_segment.cpp  read_array.cpp  serialization.cpp  set_data.cpp  sm_cond_var_demo.cpp  sm_cond_var_demo_ping.cpp  std_string_vector.cpp  vector_demo.cpp  vector_demo2.cpp  wait_for_segment.cpp  write_array.cpp  write_int_array.cpp
include/interprocesses_communication/: interprocesses_communication.hpp
include/shared_memory/: #exchange_manager_producer.hpp#  array.hpp  array.hxx  array_fundamental.hxx  array_fundamental_array.hxx  array_serializable.hxx  commands_client.hpp  condition_variable.hpp  demo_failing.cpp  exceptions.h  exceptions.hpp  exchange_manager_consumer.hpp  exchange_manager_consumer.hxx  exchange_manager_memory.hpp  exchange_manager_memory.hxx  exchange_manager_producer.hpp  exchange_manager_producer.hxx  lock.hpp  locked_condition_variable.hpp  mutex.hpp  segment_info.hpp  serializable.hpp  serializable_exchange.hpp  serializable_exchange.hxx  serializable_queue.hpp  serializable_queue.hxx  serializable_read.hxx  serializable_stack.hpp  serializable_stack.hxx  serializer.hpp  serializer.hxx  shared_memory.hpp  shared_memory.hxx  shared_memory_error.h  simpleId.hpp  thread_synchronisation.hpp
include/shared_memory/benchmarks/: benchmark_common.hh
include/shared_memory/demos/: four_int_values.hpp  item.hpp  pitoune.hpp
include/shared_memory/internal/: array_members.hpp  exchange_manager_memory.hpp  exchange_manager_memory.hxx
include/shared_memory/tests/: tests.h
protobuf/: elementary_messages.proto
python/shared_memory/: __init__.py
src/: array.cpp  condition_variable.cpp  exceptions.cpp  lock.cpp  locked_condition_variable.cpp  mutex.cpp  segment_info.cpp  shared_memory.cpp  shared_memory_exceptions.cpp  simpleId.cpp  thread_synchronisation.cpp
src/examples/: get_data.cpp  set_data.cpp
src/stress_tests/: stress_get_1.cpp  stress_set_1.cpp
src/tests/: create_data.cpp  get_data.cpp  put_data.cpp  set_data.cpp
srcpy/: __init__.py  shared_memory.cpp  wrappers.cpp
tests/: main.cpp  unit_tests.cpp  unit_tests_exchange_manager.cpp  unit_tests_serializable_stack.cpp
tests/support/: tests_executable.cpp
