<?xml version="1.0"?>

<package>

  <name>shared_memory</name>
  <version>1.0.0</version>
  <description>convenience functions using (boost) interprocess data exchange</description>
  <license>BSD 3-Clause</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- This provide cmake macros to help building the project. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <run_depend> cereal_catkin </run_depend>
  <build_depend> cereal_catkin </build_depend>
  
  <export>
  </export>

</package>
